# China-Real-Estate-Policy-Database

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG_V2.md  Makefile  README.md  pyproject.toml  requirements.txt  start_policydb.cmd  关闭房地产政策数据库.bat  打开房地产政策数据库.bat  首次安装.bat
.streamlit/: config.toml  secrets.toml.example
app/: automation_center.py  crawl_center.py  dashboard.py  geography_panel.py  intensity_panel.py  overview.py  policy_center.py  quality_center.py  review_center.py  settings_page.py  setup_wizard.py  theme.py  ui.py
config/: collection_mapping.yml  excel_sheet_map.yaml  geography_aliases.yml  organization_aliases.yml  quality_rules.yml  source_registry.yml  taxonomy.yml  update_schedule.yaml
database/: policydb.duckdb  policydb.version.json
docs/: ai_classification_review_method.md  ai_dedup_method.md  ai_first_system_acceptance.md  ai_first_unified_policy_system_audit.md  architecture_v2.md  automatic_update_operator_guide.md  automation_review_audit.md  confidence_methodology.md  configuration.md  coverage_completeness_methodology.md  crawling.md  dashboard_fidelity_review.md  data_dictionary.md  data_inventory.md  data_model.md  database_design.md  dedup_and_versioning.md  due_diligence_protocol.md  expansion_audit.md  github_deployment.md  glm.md  methodology.md  migration_report.md  migration_v1_to_v2.md  operations_v2.md  policy_archive_guide.md  policy_intensity_algorithm_mapping.md  policy_intensity_annotation_guideline.md  policy_intensity_codebook.md  policy_intensity_literature_review.md  policy_intensity_validation.md  (+12 more)
(+311 files in other folders)
