[project]
name = "policydb"
version = "0.1.0"
description = "可追溯、可持续更新的中国房地产与城市政策研究数据库"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=1.3",
  "httpx>=0.28",
  "keyring>=25.6",
  "openpyxl>=3.1",
  "plotly>=6.0",
  "polars>=1.30",
  "pyarrow>=20",
  "pydantic>=2.10",
  "psutil>=7.0",
  "pymupdf>=1.25",
  "pyyaml>=6.0",
  "rapidfuzz>=3.13",
  "streamlit>=1.45",
  "trafilatura>=2.0",
  "typer>=0.16",
  "xlsxwriter>=3.2",
]

[project.optional-dependencies]
research = ["jieba>=0.42", "pandas>=2.2", "pyreadstat>=1.2", "nbformat>=5.10"]
intensity-ml = ["joblib>=1.4", "scikit-learn>=1.6"]
intensity-transformer = ["torch>=2.6", "transformers>=4.49"]
dev = ["pytest>=8.3", "ruff>=0.11"]

[project.scripts]
policydb = "policydb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policydb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
]
